[package]
name = "orbiter"
version = "0.1.0"
authors = ["Émile Grégoire <eg@emilegregoire.ca>"]
edition = "2018"
links = "Orbitersdk"
build = "build.rs"

[dependencies]
lazy_static = "1.4"
nalgebra = "0.22"
winapi = { version = "0.3", features = ["minwindef"]}

[build-dependencies]
cc = "1.0"
chrono = "0.4"

[package.metadata.docs.rs]
targets = ["i686-pc-windows-msvc"]
